# mcphttptest

./: .gitignore  articles.json  create_agent_context_index.py  create_index.py  create_ui_templates_index.py  faiss_index.index  main.py  metadata.json  pyproject.toml  query_index.py  rag_qa.py  rag_search.py  retriever.py  server.py
data/: agent_context.md  ui_templates.json
indices/agent_context/: chunks.jsonl  faiss_index.index  metadata.json
indices/ui_templates/: faiss_index.index  metadata.json
